<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="service"
            type="com.byounghong.quickmenulib.QuickMenuService"
            />
        <variable
            name="quickmenuConst"
            type="com.byounghong.quickmenulib.consts.QuickMenuConstsKt"
            />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >

        <LinearLayout
            android:id="@+id/music_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="RtlCompat,UseCompoundDrawables">
            <com.byounghong.quickmenulib.views.PressImageView
                android:src="@drawable/btn_launcher_music_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v)-> service.startApp(quickmenuConst.MUSIC)}"
                android:contentDescription="@string/none_img" />
            <TextView
                style="@style/QuickMenuText"
                android:text="@string/music"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/weather_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/schedule_layout"
            android:orientation="vertical"
            tools:ignore="RtlCompat,UseCompoundDrawables">
            <com.byounghong.quickmenulib.views.PressImageView
                android:src="@drawable/btn_launcher_weather_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v)-> service.startApp(quickmenuConst.WEATHER)}"
                android:contentDescription="@string/none_img" />
            <TextView
                style="@style/QuickMenuText"
                android:text="@string/weather"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/recipe_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/weather_layout"
            android:orientation="vertical"
            tools:ignore="RtlCompat,UseCompoundDrawables">
            <com.byounghong.quickmenulib.views.PressImageView
                android:src="@drawable/btn_launcher_recipe_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v)-> service.startApp(quickmenuConst.RECIPE)}"
                android:contentDescription="@string/none_img" />
            <TextView
                style="@style/QuickMenuText"
                android:text="@string/recipe"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/voicecall_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            app:layout_constraintTop_toBottomOf="@id/potcast_layout"
            app:layout_constraintStart_toEndOf="@id/dictionary_layout"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            tools:ignore="RtlCompat,UseCompoundDrawables">
            <com.byounghong.quickmenulib.views.PressImageView
                android:src="@drawable/btn_launcher_vc_dim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/none_img" />
            <TextView
                style="@style/QuickMenuText"
                android:text="@string/voice_call"
                android:textColor="#C7C7C8"
                />
        </LinearLayout>
<!--        android:onClick="@{(v)-> service.startApp(quickmenuConst.VIDEOCALL)}"-->


        <LinearLayout
            android:id="@+id/youtube_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/music_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            tools:ignore="RtlCompat,UseCompoundDrawables">
            <com.byounghong.quickmenulib.views.PressImageView
                android:src="@drawable/btn_launcher_youtube_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v)-> service.startYouTube()}"
                android:contentDescription="@string/none_img" />
            <TextView
                style="@style/QuickMenuText"
                android:text="@string/youtube"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/timer_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/schedule_layout"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@id/youtube_layout"
            android:layout_marginStart="80dp"
            android:orientation="vertical"
            tools:ignore="RtlCompat,UseCompoundDrawables">
            <com.byounghong.quickmenulib.views.PressImageView
                android:src="@drawable/btn_launcher_timer_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v)-> service.startApp(quickmenuConst.TIMER)}"
                android:contentDescription="@string/none_img" />
            <TextView
                style="@style/QuickMenuText"
                android:text="@string/timer"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/memo_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/weather_layout"
            app:layout_constraintStart_toEndOf="@id/timer_layout"
            android:layout_marginStart="80dp"
            android:orientation="vertical"
            tools:ignore="RtlCompat,UseCompoundDrawables">
            <com.byounghong.quickmenulib.views.PressImageView
                android:src="@drawable/btn_launcher_memo_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v)-> service.startApp(quickmenuConst.MEMO)}"
                android:contentDescription="@string/none_img" />
            <TextView
                style="@style/QuickMenuText"
                android:text="@string/memo"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/potcast_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recipe_layout"
            app:layout_constraintStart_toEndOf="@id/memo_layout"
            android:layout_marginStart="80dp"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            tools:ignore="RtlCompat,UseCompoundDrawables">
            <com.byounghong.quickmenulib.views.PressImageView
                android:src="@drawable/btn_launcher_podcast_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v)-> service.startApp(quickmenuConst.POTCAST)}"
                android:contentDescription="@string/none_img" />
            <TextView
                style="@style/QuickMenuText"
                android:text="@string/pod_cast"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/alarm_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/youtube_layout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">
            <com.byounghong.quickmenulib.views.PressImageView
                android:src="@drawable/btn_launcher_alarm_default"
                android:layout_width="wrap_content"
                android:onClick="@{(v)-> service.startApp(quickmenuConst.ALARM)}"
                android:layout_height="wrap_content"
                android:contentDescription="@string/none_img" />
            <TextView
                style="@style/QuickMenuText"
                android:text="@string/alarm"
                />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/education_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/timer_layout"
            app:layout_constraintStart_toEndOf="@id/alarm_layout"
            android:layout_marginStart="80dp"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            tools:ignore="RtlCompat,UseCompoundDrawables">
            <com.byounghong.quickmenulib.views.PressImageView
                android:src="@drawable/btn_launcher_education_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v)-> service.startApp(quickmenuConst.EDU)}"
                android:contentDescription="@string/none_img" />
            <TextView
                style="@style/QuickMenuText"
                android:text="@string/education"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dictionary_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/memo_layout"
            app:layout_constraintStart_toEndOf="@id/education_layout"
            android:layout_marginStart="80dp"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            tools:ignore="RtlCompat,UseCompoundDrawables">
            <com.byounghong.quickmenulib.views.PressImageView
                android:src="@drawable/btn_launcher_dictionary_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{(v)-> service.startApp(quickmenuConst.DICTIONARY)}"
                android:contentDescription="@string/none_img" />
            <TextView
                style="@style/QuickMenuText"
                android:text="@string/dictionary"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/schedule_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/music_layout"
            android:layout_marginStart="80dp"
            android:orientation="vertical"
            tools:ignore="RtlCompat,UseCompoundDrawables">
            <com.byounghong.quickmenulib.views.PressImageView
                android:src="@drawable/btn_launcher_calendar_default"
                android:layout_width="wrap_content"
                android:onClick="@{(v)-> service.startApp(quickmenuConst.SCHEDULE)}"
                android:layout_height="wrap_content"
                android:contentDescription="@string/none_img" />
            <TextView
                style="@style/QuickMenuText"
                android:text="@string/schedule"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>